@@ -16,6 +16,7 @@
 - Provide graphical warnings when a MIDI file cannot be perfectly loaded<br/>
 - Fixed rare printing crash<br/>
 - Fixed not staying centered when zooming with ctrl+mouse wheel<br/>
+- Fixed "rearrange notes" feature in tablature editor, which had accidentally been disabled<br/>
 - Don't exit when save dialog is cancelled<br/>
 - Code cleanup and unit tests<br/><br/>
 
